Poprawka w umiejscowieniu przycisku menu

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>&hearts; Samochody &hearts;</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&amp;subset=latin-ext" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style.css"><link rel="icon" href="img/merc-icon.svg">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="icon" href="img/merc-icon.svg">
 </head>
 <body>
     <nav class="div-flex">
@@ -14,12 +15,12 @@
             <img src="img/bmwG.svg" alt="bmw logo">
             <img src="img/ferrariG.svg" alt="ferrari logo">
         </div>
+        <button id="menu-toggle" type="button">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
         <div id="menu-top" class="div-flex">
-            <button id="menu-toggle" type="button">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
             <a id="nav1" href="#sec1" class="link-up">
                 <div><b>Lotus</b><br>Elise</div>
             </a>
